syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.quarkus.ts.grpc.metadata";
option java_outer_classname = "MetadataOuterClass";

package metadata;

service Metadata {
  rpc GetMetadata (MetadataRequest) returns (MetadataReply) {}
}

message MetadataRequest {
  string message = 1;
}

message MetadataReply {
  string intercepted_first = 1;
  string intercepted_second = 2;
  string intercepted_third = 3;
  string request_message = 4;
}
